--- a/Labs/Virgin/Lab_2_4/LiveDesign.qsf
+++ b/Labs/Virgin/Lab_2_4/LiveDesign.qsf
@@ -1118,3 +1118,6 @@ set_location_assignment PIN_V24 -to HSMC_CLKOUT_N2
 set_instance_assignment -name IO_STANDARD LVDS -to HSMC_CLKOUT_N2
 set_location_assignment PIN_G24 -to HSMC_CLKOUT_N1
 set_instance_assignment -name IO_STANDARD LVDS -to HSMC_CLKOUT_N1
+set_global_assignment -name QIP_FILE mf_divide_8.qip
+set_global_assignment -name QIP_FILE mf_const.qip
+set_global_assignment -name QIP_FILE mf_divide_16.qip
