--- a/Labs/Virgin/Lab_3_1/LiveDesign.qsf
+++ b/Labs/Virgin/Lab_3_1/LiveDesign.qsf
@@ -34,7 +34,7 @@
 set_global_assignment -name PROJECT_SHOW_ENTITY_NAME ON
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 4.2
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "10:51:11  DECEMBER 16, 2004"
-set_global_assignment -name LAST_QUARTUS_VERSION 13.1
+set_global_assignment -name LAST_QUARTUS_VERSION "17.1.0 Lite Edition"
 set_global_assignment -name BDF_FILE LEDtest.bdf
 set_global_assignment -name AHDL_FILE 7segment.tdf
 set_global_assignment -name BDF_FILE Counter.bdf
@@ -1125,3 +1125,5 @@ set_instance_assignment -name IO_STANDARD LVDS -to HSMC_CLKOUT_N2
 set_location_assignment PIN_G24 -to HSMC_CLKOUT_N1
 set_instance_assignment -name IO_STANDARD LVDS -to HSMC_CLKOUT_N1
 set_global_assignment -name QIP_FILE mf_counter.qip
+set_global_assignment -name QIP_FILE mf_count1.qip
+set_global_assignment -name VECTOR_WAVEFORM_FILE LiveDesign1.vwf
